# trashbot

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
input_phrases/: phrases.yml
src/cli/: commands.py
src/input_phrases/: phrases.yml
tests/managers/: database_test.py  reminder_test.py
tests/parsers/: parser_test.py  parser_tests.py
trashbot/cli/: __init__.py  commands.py
trashbot/input_phrases/: phrases.yml
trashbot/managers/: database.py  reminder.py  timer.py  weather.py
trashbot/parsers/: parser.py  reminder_parser.py
trashbot/types/: reminder.py  reminders.py
trashbot/ui/: base.py
trashbot/utils/: async_util.py  logger.py
